# workshop-fastapi-websockets

./: .env.dev  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: index.html  main.py
src/core/: auth.py  config.py  loggers.py  models.py  openapi.py  schemas.py
src/database/: crud.py  database.py
src/routers/posts/: controller.py  views.py  websockets.py
src/routers/users/: controller.py  views.py
