[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = "Example FastAPI application"
authors = ["Pythoneers <pythoneers@ordina.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.7"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
sqlalchemy = "^2.0.19"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"
pytest-mock = "^3.11.1"
pytest-httpx = "^0.23.1"
pylint = "^2.17.4"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
